# openapi/openapi.yaml
@@ -90,6 +90,29 @@ paths:
                 $ref: '#/components/schemas/User'
         '404':
           description: User not found
+  /users/{id}/tasks:
+    get:
+      summary: Get tasks for a specific user
+      tags:
+        - tasks
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: The ID of the user
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: A list of tasks for the user
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Task'
+        '404':
+          description: User not found
   /tasks:
     get:
       summary: Get all tasks
@@ -114,7 +137,15 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Task'
+              type: object
+              properties:
+                task:
+                  type: string
+                is_done:
+                  type: boolean
+                user_id:
+                  type: integer
+                  description: The ID of the user to associate the task with
       responses:
         '201':
           description: The created task
@@ -189,6 +220,9 @@ components:
           type: string
         is_done:
           type: boolean
+        user_id:
+          type: integer
+          format: uint
     User:
       type: object
       properties:
@@ -199,3 +233,7 @@ components:
           type: string
         password:
           type: string 
+        tasks:
+          type : array
+          items:
+            $ref : '#/components/schemas/Task'
